syntax = "proto3";

package field;

service Field {
  rpc GetField (FieldRequest) returns (FieldReply) {}
}

message FieldRequest {}

message FieldReply {
  string field = 1;
}
